Quorum3/Library/Tests/Actions/Pass/ReturnIfElseToVarBool2.quorum
class Main
    action Main
        integer a = 2
        boolean x
        x = foo(a)
        output x
    end

    action foo (integer a) returns boolean
        if a < 0
            return true
        else
            return false
        end
    end
end