Quorum3/Library/Tests/Actions/Fail/MissingEnd.quorum
class Main 
    action Main
        number x = 2.5
        msg = "x "
        if x < 1
            msg = " < 1"
            output msg
        elseif x > 2
            output "x > 2"
        else
            msg = msg + " = "
            output msg + x
        end

        integer a = 4
        if even(a)
            output "even"
        else
            output "odd"
        end
    end

    action even(integer i) returns boolean
        if i mod 2 = 0
            return true
        else
            return false
        end
    //end (deliberately missing an end)
end